Refactor: style folder renamed

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   <title>Document</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
+<body class="body">
   <div class="wrap"></div>
+
   <section class="widget">
     <button class="widget__button-wrap">
       <p class="widget__button-text">
         Новых сообщений
       </p>
       <p class="widget__button-number">
-        нет
+        2
       </p>
     </button>
+    <div class="news">
+    </div>
+
   </section>
 </body>
 </html>
