Feature: html news colored

--- a/index.html
+++ b/index.html
@@ -10,16 +10,44 @@
   <div class="wrap"></div>
 
   <section class="widget">
+
+
+    <div class="widget__news-wrap">
+      <button type="button" class="widget__news-item news-button news-button_not-visited">
+        У попа была собака
+      </button>
+
+      <button type="button" class="widget__news-item news-button news-button_active">
+        Она съела кусок мяса
+      </button>
+
+      <article class="widget__article">
+        <div class="widget__news-date-author-wrap">
+          <p class="widget__news-date">06.12.2020</p>
+          <p class="widget__news-author">Антониус Никополидиус</p>
+        </div>  
+        <p class="widget__news-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, 
+        </p>
+        <a href="#" class="widget__news-link">подробнее...</a>
+      </article>
+
+      <button type="button" class="widget__news-item news-button news-button_visited">
+        Мясо кончилось
+      </button>
+
+    </div>
+
     <button class="widget__button-wrap">
       <p class="widget__button-text">
-        Новых сообщений
+        Новых новостей
       </p>
       <p class="widget__button-number">
         2
       </p>
     </button>
-    <div class="news">
-    </div>
 
   </section>
 </body>
