Feature: html and css ready

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
     <div class="widget__news-wrap">
+      <button class="widget__exit-button"></button>
       <button type="button" class="widget__news-item news-button news-button_not-visited">
         У попа была собака
       </button>
