Feature: autolink of css and readme file

--- a/widget-tebplate.html
+++ b/widget-tebplate.html
@@ -1,61 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./pages/index.css">
+  
 </head>
-<body class="body">
-  <div class="wrap"></div>
-
-  <section id="widget">
-    
-    <template>
-    <div class="widget__news-wrap">
-      <button type="button" aria-label="exit_button" class="widget__exit-button"></button>
-      <button type="button" class="widget__news-item news-button news-button_not-visited">
-        У попа была собака
-      </button>
-
-      <div class="widget__news-with-atricle">
-      <button type="button" class="widget__news-item news-button news-button_active">
-        Она съела кусок мяса
-      </button>
-        <article class="widget__article news news_visible">
-          <div class="widget__news-date-author-wrap">
-            <p class="widget__news-date">06.12.2020</p>
-            <p class="widget__news-author">Антониус Никополидиус</p>
-          </div>  
-          <p class="widget__news-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, 
-          </p>
-          <a href="#" class="widget__news-link">подробнее...</a>
-        </article>
-      </div>
-
-      <button type="button" class="widget__news-item news-button news-button_visited">
-        Мясо кончилось
-      </button>
-
-    </div>
-    </template>
-
-    <template>
-      <button class="widget__button-wrap">
-        <p class="widget__button-text">
-          Новых новостей
-        </p>
-        <p class="widget__button-number">
-          2
-        </p>
-      </button>
-    </template>   
-
-  </section>
-
-<script src="news_widget.js"></script>
+<body>
+  <section id="widget"></section>
+  <script src="news_widget.js"></script>  
 </body>
 </html>
+
