Refactor: Comments, some bugs and new articles

--- a/testme.html
+++ b/testme.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  
+  <title></title>
 </head>
 <body>
   <section id="widget"></section>
-  <script src="news_widget.js"></script>  
+  <script src="./news_widget/news_widget.js"></script>
 </body>
 </html>
-
